<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentDua"
    android:padding="20dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_halamanKedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ini_halaman_kedua"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_halamanKedua"
        android:text="@string/nama_kamu"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/nama_kamu_"
        android:textColorHint="@color/material_dynamic_secondary80"
        />

    <Button
        android:id="@+id/btn_dua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:layout_marginTop="10dp"
        android:text="@string/ke_halaman_ketiga"
        />

</androidx.constraintlayout.widget.ConstraintLayout>